--- a/vm/ui/package.json
+++ b/vm/ui/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/themes": "^3.2.0",
     "@tanstack/react-query": "^5.64.2",
     "d3": "^7.9.0",
+    "formik": "^2.4.6",
     "react": "^18.3.1",
     "react-charts": "^3.0.0-beta.57",
     "react-dom": "^18.3.1",
