--- a/vm/ui/package.json
+++ b/vm/ui/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^6.4.1",
     "@mui/x-charts": "^7.24.1",
+    "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/themes": "^3.2.0",
     "@tanstack/react-query": "^5.64.2",
     "d3": "^7.9.0",
